...
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/img_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/design_default_color_surface"
        android:layout_marginTop="-24dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_star_border_white_24dp"
...
